migrate to new device

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -87,3 +87,9 @@ tooltip label{
 #custom-update.warning{
     color: red;
 }
+#battery.charging {
+    color: yellow;
+}
+#battery.warning{
+    color: red;
+}
